fix overflow

--- a/css/cards.css
+++ b/css/cards.css
@@ -6,7 +6,7 @@ body {
 }
 
 .src {
-  width: 100vw;
+  width: 100%;
   /* padding-top: 300px; */
   position: relative;
 }
